hphp/test/slow/async/dispose.php.expectf
Fatal error: cannot declare constructors and magic methods such as '__dispose' async in %s/dispose.php on line 4
